Ajuste e conexão docker.